--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
-    "bootstrap": "^4.6.0",
+    "bootstrap": "^5.1.0",
     "dotenv": "^8.2.0",
     "react": "^17.0.1",
-    "react-bootstrap": "^1.5.1",
+    "react-bootstrap": "^2.0.0-beta.5",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-onclickoutside": "^6.10.0",
